<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_aboutUs"
        android:title="@string/aboutus" />
    <item
        android:id="@+id/menu_contactUs"
        android:title="@string/contactus" />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/setting_icon"
        android:title="@string/settings"
        android:tooltipText="settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:tooltipText="logout_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_more"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/menu_more_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>