<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Srish"
    tools:context=".newRegistration">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newregistration_etl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newregistration_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterUsername"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newregistration_etl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newregistration_etl_username"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newregistration_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newregistration_etl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newregistration_etl_password"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newregistration_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newregistration_etl_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newregistration_etl_email"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newregistration_et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterContact"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/newregistration_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newregistration_etl_contact"
        android:layout_centerInParent="true"
        android:onClick="NewregisterData"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/newregistration_tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newregistration_btn_submit"
        android:layout_margin="10dp"
        android:padding="10dp" />

</RelativeLayout>